[package]
name = "hyper_glommio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# hyper and tokio for the hyper example. We just need the traits from Tokio
hyper = { version = "0.14", features = ["full"] }
num_cpus = "1.13.0"
pretty-bytes = "~0.2.2"
sys-info = "~0.8.0"
tokio = { version = "1" }
futures = "~0.3.5"
futures-lite = "1.11.1"
glommio = "0.8.0"
